tests/paczka1/small_fuzzy/79214890.err
Error in line 1: tKiyf S570 93,9
Error in line 2: Mjh A126 93,5
Error in line 4: Mjh S570 3,1
